<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activities.screeningdetail.ScreeningDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/reservation_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_poster_iv"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:contentDescription="@string/poster_image_description"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="21dp">

                <TextView
                    android:id="@+id/movie_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="해리 포터와 마법사의 돌" />

                <TextView
                    android:id="@+id/screening_range_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="34dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="@string/screening_range_format" />

                <TextView
                    android:id="@+id/running_time_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="@string/running_time_format" />

                <TextView
                    android:id="@+id/movie_summary_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="《해리 포터와 마법사의 돌》은 2001년 J. K. 롤링의 동명 소설을 원작으로 하여 만든, 영국과 미국 합작, 판타지 영화이다. 해리포터 시리즈 영화 8부작 중 첫 번째에 해당하는 작품이다. 크리스 콜럼버스가 감독을 맡았다." />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/reservation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="20dp">

        <Spinner
            android:id="@+id/date_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            app:layout_constraintStart_toStartOf="@id/reservation_layout"
            app:layout_constraintBottom_toTopOf="@id/minus_audience_count_btn"
            app:layout_constraintTop_toTopOf="@id/reservation_layout" />

        <Spinner
            android:id="@+id/time_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            app:layout_constraintStart_toEndOf="@id/date_spinner"
            app:layout_constraintBottom_toTopOf="@id/minus_audience_count_btn"
            app:layout_constraintTop_toTopOf="@id/reservation_layout" />

        <Button
            android:id="@+id/minus_audience_count_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19dp"
            android:background="@color/design_default_color_primary"
            android:text="@string/minus_btn_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/date_spinner"
            app:layout_constraintBottom_toTopOf="@id/seat_selection_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/audience_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/plus_audience_count_btn"
            app:layout_constraintEnd_toStartOf="@id/plus_audience_count_btn"
            app:layout_constraintStart_toEndOf="@id/minus_audience_count_btn"
            app:layout_constraintTop_toTopOf="@id/minus_audience_count_btn"
            tools:text="1" />

        <Button
            android:id="@+id/plus_audience_count_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary"
            android:text="@string/plus_btn_text"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/minus_audience_count_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/minus_audience_count_btn" />

        <Button
            android:id="@+id/seat_selection_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seat_selection"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/reservation_layout"
            tools:layout_editor_absoluteX="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
