...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{MoneyUi.currency(totalPrice)}"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="@+id/tv_seat_reservation_movie_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_seat_reservation_movie_title"
                tools:text="20,000원" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_seat_reservation_complete"
            android:layout_width="100dp"
            android:layout_height="0dp"
...
