...
                android:id="@+id/ticketing_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="11.08sp"
                android:paddingBottom="11.92sp"
                android:background="@color/purple_500"
                android:text="좌석 선택"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

