<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EAEAEA">

        <TextView
            android:id="@+id/screenLabel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:background="#494949"
            android:gravity="center"
            android:text="@string/text_screen"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/seatTable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@color/white"
            android:gravity="center"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/footer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/screenLabel">

            <TableRow>

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/a1"
                    style="@style/SeatPurple"
                    android:text="A1" />

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/a2"
                    style="@style/SeatPurple"
                    android:text="A2" />

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/a3"
                    style="@style/SeatPurple"
                    android:text="A3" />

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/a4"
                    style="@style/SeatPurple"
                    android:text="A4" />
            </TableRow>

            <TableRow>

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/b1"
                    style="@style/SeatPurple"
                    android:text="B1" />

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/b2"
                    style="@style/SeatPurple"
                    android:text="B2" />

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/b3"
                    style="@style/SeatPurple"
                    android:text="B3" />

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/b4"
                    style="@style/SeatPurple"
                    android:text="B4" />
            </TableRow>

            <TableRow>

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/c1"
                    style="@style/SeatGreen"
                    android:text="C1" />

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/c2"
                    style="@style/SeatGreen"
                    android:text="C2" />

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/c3"
                    style="@style/SeatGreen"
                    android:text="C3" />

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/c4"
                    style="@style/SeatGreen"
                    android:text="C4" />
            </TableRow>

            <TableRow>

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/d1"
                    style="@style/SeatGreen"
                    android:text="D1" />

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/d2"
                    style="@style/SeatGreen"
                    android:text="D2" />

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/d3"
                    style="@style/SeatGreen"
                    android:text="D3" />

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/d4"
                    style="@style/SeatGreen"
                    android:text="D4" />
            </TableRow>

            <TableRow>

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/e1"
                    style="@style/SeatBlue"
                    android:text="E1" />

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/e2"
                    style="@style/SeatBlue"
                    android:text="E2" />

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/e3"
                    style="@style/SeatBlue"
                    android:text="E3" />

                <Button
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="0dp"
                    android:id="@+id/e4"
                    style="@style/SeatBlue"
                    android:text="E4" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@color/white"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="16dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="해리 포터와 마법사의 돌" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#4E4E4E"
                    android:textSize="16sp"
                    tools:text="12000원" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_booking"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/btn_booking_background"
                android:enabled="false"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:text="@string/text_complete"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="0dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
