...
    <string name="reservation_count_minus">-</string>

    <string name="reservation_count_info">일반 %s명</string>
    <string name="reservation_total_price">%,d원 (현장 결제)</string>
    <string name="reservation_total_money">%,d원</string>

    <string name="reservation_dialog_title">예매 확인</string>
    <string name="reservation_dialog_message">정말 예매하시겠습니까?</string>
    <string name="reservation_dialog_positive">예매 완료</string>
    <string name="reservation_dialog_negative">취소</string>

    <string name="reservation_result_cancel_time_description">영화 상영 시작 시간 %d분 전까지\n취소가 가능합니다.</string>
    <string name="invalid_reservation_message">"예약 날짜 및 시간을 선택해 주세요"</string>
...
